// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createGoogleCloudIntegrationEntity should produce entity and copy labels if labels exist on resource 1`] = `
{
  "_class": [
    "DataStore",
  ],
  "_key": "bucket:customer-managed-encryption-key-bucket-1234",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "encryption": {
          "defaultKmsKeyName": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
        },
        "etag": "CAE=",
        "iamConfiguration": {
          "bucketPolicyOnly": {
            "enabled": false,
          },
          "uniformBucketLevelAccess": {
            "enabled": false,
          },
        },
        "id": "customer-managed-encryption-key-bucket-1234",
        "kind": "storage#bucket",
        "labels": {
          "myLabel": "test",
        },
        "location": "US",
        "locationType": "multi-region",
        "metageneration": "1",
        "name": "customer-managed-encryption-key-bucket-1234",
        "projectNumber": "1234",
        "selfLink": "https://www.googleapis.com/storage/v1/b/customer-managed-encryption-key-bucket-1234",
        "storageClass": "STANDARD",
        "timeCreated": "2020-07-28T19:06:14.033Z",
        "updated": "2020-07-28T19:06:14.033Z",
      },
    },
  ],
  "_type": "google_storage_bucket",
  "classification": null,
  "createdOn": 1595963174033,
  "displayName": "customer-managed-encryption-key-bucket-1234",
  "encrypted": true,
  "encryptionKeyRef": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
  "etag": "CAE=",
  "id": "customer-managed-encryption-key-bucket-1234",
  "kmsKeyName": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
  "location": "US",
  "name": "customer-managed-encryption-key-bucket-1234",
  "public": false,
  "retentionDate": undefined,
  "retentionPeriod": undefined,
  "retentionPolicyEnabled": undefined,
  "storageClass": "STANDARD",
  "tag.myLabel": "test",
  "uniformBucketLevelAccess": false,
  "updatedOn": 1595963174033,
  "webLink": "https://console.cloud.google.com/storage/browser/customer-managed-encryption-key-bucket-1234;tab=objects?forceOnBucketsSortingFiltering=false&project=j1",
}
`;

exports[`#createGoogleCloudIntegrationEntity should produce entity and not fail if labels do not exist on resource 1`] = `
{
  "_class": [
    "DataStore",
  ],
  "_key": "bucket:customer-managed-encryption-key-bucket-1234",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "encryption": {
          "defaultKmsKeyName": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
        },
        "etag": "CAE=",
        "iamConfiguration": {
          "bucketPolicyOnly": {
            "enabled": false,
          },
          "uniformBucketLevelAccess": {
            "enabled": false,
          },
        },
        "id": "customer-managed-encryption-key-bucket-1234",
        "kind": "storage#bucket",
        "labels": undefined,
        "location": "US",
        "locationType": "multi-region",
        "metageneration": "1",
        "name": "customer-managed-encryption-key-bucket-1234",
        "projectNumber": "1234",
        "selfLink": "https://www.googleapis.com/storage/v1/b/customer-managed-encryption-key-bucket-1234",
        "storageClass": "STANDARD",
        "timeCreated": "2020-07-28T19:06:14.033Z",
        "updated": "2020-07-28T19:06:14.033Z",
      },
    },
  ],
  "_type": "google_storage_bucket",
  "classification": null,
  "createdOn": 1595963174033,
  "displayName": "customer-managed-encryption-key-bucket-1234",
  "encrypted": true,
  "encryptionKeyRef": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
  "etag": "CAE=",
  "id": "customer-managed-encryption-key-bucket-1234",
  "kmsKeyName": "projects/j1-gc-integration-dev-v2/locations/us/keyRings/j1-gc-integration-dev-v2-bucket-ring/cryptoKeys/j1-gc-integration-dev-v2-bucket-key",
  "location": "US",
  "name": "customer-managed-encryption-key-bucket-1234",
  "public": false,
  "retentionDate": undefined,
  "retentionPeriod": undefined,
  "retentionPolicyEnabled": undefined,
  "storageClass": "STANDARD",
  "uniformBucketLevelAccess": false,
  "updatedOn": 1595963174033,
  "webLink": "https://console.cloud.google.com/storage/browser/customer-managed-encryption-key-bucket-1234;tab=objects?forceOnBucketsSortingFiltering=false&project=j1",
}
`;
